form validation begins

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 		</p>
 		<label for="fullName" name="fullName">Full name
 		<input type="text" id="fullName">
+		<p id="msg" name="msg1" class="msg"></p>
 		</label>
 		<label for="adres" name="adres">Adress
 		<input type="text" id="adres">
+		<p id="msg" name="msg2" class="msg"></p>
 		</label>
 	</form>
 
